4.5.3
*************
- Fix `cat_arc` `area` translation on es_CR
- translate(config_param_system) `admin_currency`